recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: reassignment to val
level=level+10
     ^