recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
level=level+10
if (level==0) {
	avance(length)
	droite(120)
	avance(length)
	droite(120)
	avance(length)
		}	
else {
	avance(length/2)
	droite(40)
	sierpinski(level-1, length/2)
	droite(60)
	avance(length/2)
	droite(120)
	avance(length)
	droite(120)
	avance(length)
	
		}
}